fix: database password

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "workstation id=pam-tcc.mssql.somee.com;packet size=4096;user id=guilhermesouza_SQLLogin_1;pwd=qj8rcojer4;data source=pam-tcc.mssql.somee.com;persist security info=False;initial catalog=pam-tcc;TrustServerCertificate=True"
+     "DefaultConnection": "Server=DESKTOP-JQ79203\\SQLEXPRESS;Database=PamDb;User Id=seuUsuario;Password={senha_banco};MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
