fix: json ident

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "workstation id=pam-tcc.mssql.somee.com;packet size=4096;user id=guilhermesouza_SQLLogin_1;pwd={senha_banco};data source=pam-tcc.mssql.somee.com;persist security info=False;initial catalog=pam-tcc;TrustServerCertificate=True"
+    "DefaultConnection": "workstation id=pam-tcc.mssql.somee.com;packet size=4096;user id=guilhermesouza_SQLLogin_1;pwd=qj8rcojer4;data source=pam-tcc.mssql.somee.com;persist security info=False;initial catalog=pam-tcc;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
